# niri-bar

./: Cargo.toml  README.md  TEST_PLAN.md  TODO.txt  foo  lcov.info  niri-bar-minimal.yaml  niri-bar.yaml  rules
.cursor/rules/: niri-bar-best-practices.mdc  niri-bar-module-battery.mdc  niri-bar-testing.mdc  niri-bar-ui.mdc  niri-bar-yaml.mdc  niri-readme.mdc  very-critical-documentation.mdc  very-important-modules.mdc
.github/workflows/: ci.yml
ci/: test_all.sh
examples/: config_manager_example.rs  file_watcher_example.rs
src/: application.rs  bar.rs  config.rs  file_watcher.rs  lib.rs  logger.rs  main.rs  monitor.rs  niri-bar-yaml.schema.json  ui.rs  wallpaper.rs
src/modules/: battery.rs  clock.rs  mod.rs  tray.rs  viewport.rs  wallpaper.rs  window_title.rs  workspaces.rs
src/niri/: mod.rs
tests/: application_tests.rs  bar_tests.rs  config_tests.rs  file_watcher_tests.rs  hot_reload_tests.rs  logger_tests.rs  modules_tests.rs  monitor_tests.rs  niri_bus_tests.rs  test_viewport_module.rs  ui_tests.rs  wallpaper_tests.rs  workspaces_resolve_tests.rs
themes/: base.css  dracula.css  solarized.css  wombat.css
wiki/: Architecture.md  Configuration.md  HotReload.md  Logging.md  Modules.md  NiriIPC.md  Testing.md  Theming.md
