[package]
name = "niri-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "6.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
dirs = "5.0"
glib = "0.19"
gio = "0.19"
serde_json = "1.0.143"
gtk4 = "0.9"
gdk4 = "0.9"
gtk4-layer-shell = "0.5.0"
log = "0.4.27"
env_logger = "0.11.8"
chrono = "0.4.41"
shellexpand = "3.1.1"
tempfile = "3.21.0"
indexmap = { version = "2.2", features = ["serde"] }
once_cell = "1.19"

[dev-dependencies]
proptest = "1.0"
insta = { version = "1.0", features = ["glob"] }
assert_fs = "1.0"
pretty_assertions = "1.0"
tempfile = "3.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "test-util"] }
loom = "0.7"
criterion = "0.5"
mockall = "0.12"
